tests/e2e/keyword_and_service_argument.story
service action from: "" and: "" # Idea is to demonstrate argument `and` is parsed successfully.